버튼모양 스타일

--- a/01.html
+++ b/01.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="button">
-        <a href="#" class="font_bold font_style font_size text_center">CLICK</a>
+        <a href="#" class="font_bold font_style font_size text_center">CLICK~</a>
     </div>
 </body>
 </html>
