하이퍼링크 스타일 추가

--- a/01.html
+++ b/01.html
@@ -22,6 +22,8 @@
 
         .button > a {
             display: block;
+            line-height: 70px; /* 하이퍼링크 높이(line-height)와 버튼의 높이(height)를 똑같이 하면 글씨가 높이 기준 중앙에 위치함 */
+            text-decoration: none;
         }
     </style>
 </head>
