--- a/02.html
+++ b/02.html
@@ -14,14 +14,17 @@
         .box:nth-child(1) {
             background-color: red;
             left: 10px; top: 10px;
+            z-index: 100;
         }
         .box:nth-child(2) {
             background-color: green;
             left: 50px; top: 50px;
+            z-index: 10;
         }
         .box:nth-child(3) {
             background-color: blue;
             left: 90px; top: 90px;
+            z-index: 1;
         }
     </style>
 </head>
@@ -29,5 +32,7 @@
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
+    <h1>Lorem ipsum dolor sit, amet</h1>
+    <h1>Lorem ipsum dolor sit, amet</h1>
 </body>
 </html>
