--- a/02.html
+++ b/02.html
@@ -29,10 +29,12 @@
     </style>
 </head>
 <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
     <h1>Lorem ipsum dolor sit, amet</h1>
+    <div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
     <h1>Lorem ipsum dolor sit, amet</h1>
 </body>
 </html>
